# kubeadm-multipass

./: .env.example  .gitignore  .pre-commit-config.yaml  .todocheck.yaml  README.md  SECURITY.md  Taskfile.yml  mkdocs.yml  pyproject.toml  skaffold.yaml  sonar-project.properties
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .goreleaser.yml  kube-linter.yaml  markdown-link-config.json
docs/: commands.md  components.md  contributing.md  env-vars.md  index.md  releasing.md  roadmap.md  usage.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
provision/generators/: README.yaml
provision/k8s/apps/: kustomization.yaml
provision/k8s/apps/whoami/: configmap.yaml  deployment.yaml  grafana.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  service.yaml
provision/k8s/manifests/base/: kustomization.yaml
provision/k8s/manifests/overlays/core/: kustomization.yaml
provision/k8s/manifests/overlays/core/calico/: crd.yaml  kustomization.yaml
provision/k8s/manifests/overlays/core/crossplane/: kustomization.yaml  namespace.yaml  providerconfig.yaml  providers.yaml  secrets.yaml
provision/k8s/manifests/overlays/core/grafana/: configmap.yaml  deployment.yaml  kustomization.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml  secrets.yaml
provision/k8s/manifests/overlays/core/logging/: configmap.yaml  deployment.yaml  ds.yaml  kustomization.yaml  rbac.yaml  secrets.yaml
provision/k8s/manifests/overlays/core/loki/: configmap.yaml  deployment.yaml  kustomization.yaml  persistentvolume.yaml  persistentvolumeclaim.yaml
provision/k8s/manifests/overlays/core/metallb/: configmap.yaml  kustomization.yaml
provision/k8s/manifests/overlays/core/traefik/: crd.yaml  deployment.yaml  ingressroute.yaml  kustomization.yaml  rbac.yaml  secrets.yaml  svc.yaml
provision/k8s/manifests/overlays/whoami/: grafana.yaml  ingress.yaml  kustomization.yaml  whoami-deploy.yaml  whoami-svc.yaml
provision/k8s/system/calico/resources/helm/: kustomization.yaml  values.yaml
provision/k8s/system/crossplane/: kustomization.yaml
provision/k8s/system/crossplane/resources/: namespace.yaml  providerconfig.yaml  providers.yaml  secrets.yaml
provision/k8s/system/crossplane/resources/helm/: kustomization.yaml
provision/k8s/system/grafana/: configmap.yaml  deployment.yaml  ingressroute.yaml  persistentvolume.yaml  service.yaml
provision/k8s/system/logging/: configmap.yaml  ds.yaml  kustomization.yaml  rbac.yaml  sa.yaml
provision/k8s/system/loki/: configmap.yaml  deployment.yaml  ingressroute.yaml  persistentvolume.yaml  service.yaml
provision/k8s/system/metallb/: kustomization.yaml
provision/k8s/system/metallb/resources/: configmap.yaml
provision/k8s/system/metallb/resources/helm/: kustomization.yaml  values.yaml
provision/k8s/system/traefik/: kustomization.yaml
provision/k8s/system/traefik/local/: kustomization.yaml
provision/k8s/system/traefik/local/resources/: ingressroute.yaml
provision/k8s/system/traefik/local/resources/helm/: kustomization.yaml  values.yaml
provision/multipass/kubernetes/: master.yaml  node.yaml
provision/task/: crossplane.yml  docker.yml  k8s.yml  multipass.yml  python.yml
