[tool.poetry]
name = "kubeadm-multipass"
version = "0.0.0"
description = "kubeadm-multipass"
authors = ["Luis Mayta <luis@hadenlabs.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.2"
bridgecrew = "*"
doc8 = "*"
grip = "*"
isort = "*"
mkdocs = "*"
mkdocs-material = "*"
mypy = "*"
parso = "*"
pre-commit = "*"
pycodestyle = "*"
pydocstyle = "*"
pygments = "*"
pylint = "*"
pymdown-extensions = "*"
pytest = ">=6.2.4"
black = "*"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[tool.poetry_bumpversion.file."pyproject.toml"]

[tool.poetry_bumpversion.file."sonar-project.properties"]
replace = 'sonar.projectVersion = "{new_version}"'
search = 'sonar.projectVersion = "{current_version}"'

[tool.black]
line-length = 120

[tool.bandit]
skips = ["B101"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
files = ["."]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
