[tool.poetry]
name = "kubeadm-multipass"
version = "0.0.0"
description = "kubeadm-multipass"
authors = ["Luis Mayta <luis@hadenlabs.com>"]
license = "LGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
boto3 = "^1.26.130"
requests = "^2.28.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bumpversion = "*"
ipdb = "*"
python-language-server = { extras = ["all"], version = "*" }

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pymdown-extensions = "*"
doc8 = "*"
grip = "*"
mkdocs = "*"
mkdocs-material = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"
faker = "*"
mock = "*"
pytest-mock = "*"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
pytest-watcher = "^0.2.6"
freezegun = "^1.2.2"
responses = "^0.22.0"
pytest-asyncio = "^0.20.3"
PyHamcrest = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pre-commit = "*"
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
black = "^23.1.0"

[tool.poetry.group.typing]
optional = true

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material"]

[tool.poetry_bumpversion.file."sonar-project.properties"]
search = 'sonar.projectVersion={current_version}'
replace = 'sonar.projectVersion={new_version}'

[tool.mypy]
show_error_codes = true
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
pretty = true
exclude = ["notebooks"]

[tool.black]
line-length = 90

[tool.bandit]
skips = ["B101"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
